--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-firebase/app": "18.7.3",
-    "@react-native-firebase/messaging": "18.7.3",
-    "@react-native-firebase/remote-config": "18.7.3",
+    "@react-native-firebase/analytics": "^18.7.3",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
+    "@react-native-firebase/remote-config": "^18.7.3",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.14",
@@ -50,6 +51,7 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "^3.11.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.3.0",
