--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.6.0",
     "moment": "^2.30.1",
+    "pulltorefreshjs": "^0.1.22",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animated-spinkit": "^1.5.2",
@@ -52,11 +53,12 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-webview": "^13.10.2",
+    "react-native-webview": "^13.10.5",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
